# shop

./: .gitignore  pyproject.toml
apps/orders/: models.py
apps/products/: models.py
apps/users/: crud.py  models.py  schemas.py  views.py
core/: database.py  main.py  settings.py
