[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Beknazar Abdyldaev <abdyldaev.duff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
